k8s/sanic-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sanic-app
  name: sanic-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: sanic-app
status:
  loadBalancer: {}
