k8s/sanic-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: trustme.com
    http:
      paths:
      - path: /sanic-app
        pathType: Prefix
        backend:
          service:
            name: sanic-app
            port: 
              number: 8000
